# jiq

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md  dist-workspace.toml
.github/workflows/: ci.yml  release.yml
development/: AUTOCOMPLETE_REARCHITECTURE.md  README.md
development/subsystems/: SYNTAX_HIGHLIGHTING.md
docs/: PLAN_CENTRALIZE_THEME.md  PLAN_HELP_POPUP_UI.md  PLAN_MOUSE_SUPPORT.md  PLAN_RESULT_NAVIGATION.md  PLAN_SNIPPET_LIBRARY.md  PLAN_TEXT_SELECTION.md  variable-autosuggestion-plan.md
proptest-regressions/ai/: ai_state.txt  ai_state_tests.txt  provider_tests.txt
proptest-regressions/ai/ai_render_tests/: model_name_tests.txt
proptest-regressions/ai/suggestion/: parser_tests.txt
proptest-regressions/app/: app_events_tests.txt
proptest-regressions/clipboard/: clipboard_events_tests.txt
proptest-regressions/search/search_events_tests/: navigation_tests.txt
proptest-regressions/tooltip/: detector.txt
src/: ai.rs  app.rs  autocomplete.rs  clipboard.rs  config.rs  config_tests.rs  editor.rs  error.rs  help.rs  history.rs  input.rs  json.rs  json_tests.rs  layout.rs  lib.rs  main.rs  notification.rs  query.rs  results.rs  scroll.rs  search.rs  snippets.rs  stats.rs  syntax_highlight.rs  test_utils.rs  theme.rs  tooltip.rs  widgets.rs
src/ai/: ai_debouncer.rs  ai_events.rs  ai_events_tests.rs  ai_render.rs  ai_state.rs  ai_state_tests.rs  cache.rs  context.rs  context_tests.rs  prompt.rs  prompt_tests.rs  provider.rs  provider_tests.rs  selection.rs  worker.rs  worker_tests.rs
src/ai/ai_events_tests/: integration_tests.rs  property_tests.rs  query_result_tests.rs
src/ai/ai_render_tests/: content_tests.rs  height_persistence_tests.rs  layout_tests.rs  model_name_tests.rs  snapshot_tests.rs  spacing_tests.rs  widget_background_unit_tests.rs  widget_selection_tests.rs
src/ai/ai_state/: lifecycle.rs  response.rs  suggestions.rs
src/ai/provider/: anthropic.rs  async_anthropic.rs  async_anthropic_tests.rs  async_bedrock.rs  async_gemini.rs  async_openai.rs
src/ai/provider_tests/: anthropic_tests.rs  bedrock_tests.rs  error_tests.rs  gemini_tests.rs  openai_tests.rs
src/ai/render/: content.rs  layout.rs  suggestions.rs  text.rs
src/ai/selection/: keybindings.rs  state.rs  state_tests.rs
src/ai/snapshots/: jiq__ai__ai_render__tests__snapshot_ai_popup_empty_state.snap  jiq__ai__ai_render__tests__snapshot_ai_popup_error_state.snap  jiq__ai__ai_render__tests__snapshot_ai_popup_loading_state.snap  jiq__ai__ai_render__tests__snapshot_ai_popup_loading_with_previous.snap  jiq__ai__ai_render__tests__snapshot_ai_popup_long_query_wrapping.snap  jiq__ai__ai_render__tests__snapshot_ai_popup_not_configured.snap  jiq__ai__ai_render__tests__snapshot_ai_popup_not_visible.snap  (+3 more)
src/ai/suggestion/: parser.rs  parser_tests.rs
src/app/: app_events.rs  app_events_tests.rs  app_render.rs  app_render_tests.rs  app_state.rs  app_state_tests.rs  events.rs  help_content.rs  input_state.rs  mod.rs  mouse_click.rs  mouse_click_tests.rs  mouse_events.rs  mouse_hover.rs  mouse_hover_tests.rs  mouse_scroll.rs  mouse_scroll_tests.rs  query_state.rs  render.rs  state.rs  syntax_overlay.rs
src/autocomplete/: array_key_enrichment.rs  array_key_enrichment_strategy_tests.rs  autocomplete_render.rs  autocomplete_render_tests.rs  autocomplete_state.rs  autocomplete_state_tests.rs  brace_tracker.rs  brace_tracker_tests.rs  context.rs  context_tests.rs  insertion.rs  insertion_tests.rs  jq_functions.rs  jq_functions_tests.rs  json_analyzer.rs  mod.rs  provenance.rs  provenance_tests.rs  result_analyzer.rs  result_analyzer_tests.rs  scan_state.rs  state.rs  target_level.rs  target_level_router.rs  target_level_tests.rs  variable_extractor.rs  variable_extractor_tests.rs
src/clipboard/: backend.rs  clipboard_events.rs  clipboard_events_tests.rs  events.rs  osc52.rs  system.rs
src/config/: ai_types.rs  ai_types_tests.rs  types.rs  types_tests.rs
src/editor/: editor_events.rs  editor_events_tests.rs  events.rs  mod.rs  mode.rs  mode_tests.rs  text_objects.rs  text_objects_tests.rs
src/help/: help_content.rs  help_content_tests.rs  help_line_render.rs  help_line_render_tests.rs  help_popup_render.rs  help_popup_render_tests.rs  help_state.rs  help_state_tests.rs  mod.rs
src/history/: events.rs  history_events.rs  history_render.rs  history_state.rs  history_state_tests.rs  matcher.rs  mod.rs  storage.rs
src/input/: input_render.rs  input_render_tests.rs  input_state.rs  loader.rs  loader_tests.rs  mod.rs  reader.rs
src/layout/: layout_hit_test.rs  layout_hit_test_tests.rs  layout_regions.rs  layout_regions_tests.rs
src/notification/: notification_render.rs  notification_render_tests.rs  notification_state.rs  notification_state_tests.rs
src/query/: debouncer.rs  debouncer_tests.rs  executor.rs  executor_tests.rs  mod.rs  query_state.rs  query_state_tests.rs  worker.rs
src/results/: cursor_state.rs  events.rs  mod.rs  results_events.rs  results_events_tests.rs  results_render.rs  results_render_tests.rs
src/scroll/: scroll_state.rs  scroll_state_tests.rs  scroll_trait.rs  scroll_trait_tests.rs
src/search/: matcher.rs  search_events.rs  search_events_tests.rs  search_render.rs  search_state.rs  search_state_tests.rs
src/snippets/: snippet_events.rs  snippet_events_tests.rs  snippet_matcher.rs  snippet_matcher_tests.rs  snippet_render.rs  snippet_render_tests.rs  snippet_state.rs  snippet_state_tests.rs  snippet_storage.rs  snippet_storage_tests.rs
src/stats/: parser.rs  parser_tests.rs  stats_state.rs  types.rs
src/syntax/: mod.rs
src/syntax_highlight/: bracket_matcher.rs  bracket_matcher_tests.rs  mod.rs  overlay.rs
src/syntax_highlight_tests/: unit_tests.rs
src/tooltip/: detector.rs  events.rs  operator_content.rs  tooltip_content.rs  tooltip_events.rs  tooltip_render.rs  tooltip_render_tests.rs  tooltip_state.rs
src/widgets/: popup.rs  scrollbar.rs  scrollbar_tests.rs
tests/: deferred_loading_tests.rs  integration_tests.rs
tests/fixtures/: array.json  invalid.json  nested.json  simple.json
(+360 files in other folders)
